# nos-v

./: .clang-format  .gitignore  CHANGELOG.md  Makefile.am  README.md  TODO.md  configure.ac  nos-v.pc.in  nosv.toml
api/: nosv.h
api/nosv/: affinity.h  affinity2.h  alpi-defs.h  alpi.h  compat.h  error.h  hwinfo.h  memory.h
contrib/: add-final-whitespace.sh  clang-tidy-config  clang-tidy.sh  prevent-undefined-parameters.sh
docs/: index.md
docs/dev/: coding.md
docs/user/: api.md  config.md  errors.md  hwc.md  tracing.md
m4/: cache.m4  cc.m4  compiler.m4  features.m4  libnuma.m4  ovni.m4  papi.m4
monitoring-tests/: Makefile
src/: alpi.c  bootstrap.c  error.c  instr.c
src/config/: config.c  toml.c
src/hardware/: cpus.c  locality.c  pids.c  threads.c  topology.c
src/hardware-counters/: hardwarecounters.c
src/hwcounters/: cpuhwcounters.c  hwcounters.c  taskhwcounters.c  threadhwcounters.c
src/hwcounters/papi/: papicpuhwcounters.c  papihwcounters.c  papitaskhwcounters.c  papithreadhwcounters.c
src/include/: climits.h  common.h  compat.h  compiler.h  defaults.h  instr.h  list.h  nosv-internal.h  spinlock.h
src/include/config/: config.h  configspec.h  toml.h
src/include/generic/: accumulator.h  arch.h  bitset.h  chrono.h  clock.h  condvar.h  cpuset.h  futex.h  hashfunction.h  hashtable.h  heap.h  list.h  mutex.h  proc.h  ringbuffer.h  signalmutex.h  spinlock.h  tree.h
src/include/generic/arch/: arm64.h  power.h  riscv.h  x86.h
src/include/hardware/: cpus.h  eventqueue.h  locality.h  pids.h  threads.h  topology.h
src/include/hardware-counters/: hardwarecounters.h  supportedhardwarecounters.h
src/include/hwcounters/: cpuhwcounters.h  hwcounters.h  supportedhwcounters.h  taskhwcounters.h  threadhwcounters.h
src/include/hwcounters/papi/: papicpuhwcounters.h  papihwcounters.h  papitaskhwcounters.h  papithreadhwcounters.h
src/include/memory/: alloc.h  asan.h  backbone.h  buddy.h  sharedmemory.h  slab.h
src/include/monitoring/: cpumonitor.h  cpustatistics.h  cpustats.h  monitoring.h  monitoringsupport.h  taskmonitor.h  taskstatistics.h  taskstats.h  tasktypestatistics.h  tasktypestats.h
src/include/scheduler/: arbiter.h  cpubitset.h  cpumanager.h  dtlock.h  governor.h  mpsc.h  scheduler.h  spsc.h
src/include/support/: affinity.h
src/include/system/: config.h  taskgroup.h  tasks.h
src/instrument/: instr
src/memory/: backbone.c  sharedmemory.c  slab-asan.c  slab.c
src/monitoring/: cpumonitor.c  cpustatistics.c  cpustats.c  monitoring.c
src/scheduler/: arbiter.c  governor.c  scheduler.c
src/support/: affinity.c  barrier.c  cond.c  mutex.c  pthread_create.c  rwlock.c
src/system/: tasks.c
tests/: Makefile.am  wrapper.sh
tests/basic/: affinity-support.c  alpi.c  attach-external.c  attach-instr.c  attach.c  barrier.c  basic.c  cond.c  crash.c  deadline-wake.c  deadline.c  error-code.c  immediate.c  init-multicall.c  init-procs.c  init.c  inline.c  join.c  mix.c  multi-pause.c  multi_pause.c  mutex.c  parallel-cancel.c  parallel-init.c  parallel.c  priority.c  pthread_create.c  reinit.c  rwlock.c  schedpoint.c  shutdown-ownership.c  submit-window.c  suspend.c  topology-numa-cpu.c  turbo.c  yield.c
tests/common/: driver.c  tap.h  utils.h
tests/include/: test.h  unit.h
tests/regression/: attach-is.c  parallel-tasks-cross-process.c  parallel-tasks-submission.c  parallel-tasks-yield.c
tests/unit/: main.c  test-backbone-pressure.c  test-dtlock.c  test-heap.c  test-ring-buffer.c
utils/: README.md  inner-shared-numa.sh  jobscript-basic.sh  jobscript-coexec.sh  jobscript-shared-numa.sh  jobscript-shared.sh
